Remove unnecessary words

--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@
           <div class="hero-title">
             <h1 id="hero-name">Tyson Jenkins</h1>
             <p>DevOps Engineer & Software Developer</p>
-            <p class="tagline">
-              Building scalable infrastructure and crafting elegant solutions
-            </p>
           </div>
           <div class="social-links">
             <a class="icon" href="https://github.com/timmyjinks" title="GitHub">
@@ -76,22 +73,6 @@
               <p><span class="command">$ cat aboutme.txt</span></p>
               <p><span class="comment"># Location</span></p>
               <p>Salt Lake City, UT</p>
-              <p></p>
-              <p><span class="comment"># Focus Areas</span></p>
-              <p>
-                <span class="string"
-                  >["cloud infrastructure", "containerization",
-                  "automation"]</span
-                >
-              </p>
-              <p></p>
-              <p><span class="comment"># Tech Stack</span></p>
-              <p>
-                <span class="string"
-                  >["Docker", "Python", "C++", "JavaScript", "NixOS",
-                  "Kubernetes"]</span
-                >
-              </p>
               <p></p>
               <p><span class="comment"># Interests</span></p>
               <p>
@@ -129,7 +110,6 @@
               <p>FastAPI</p>
               <p>Docker</p>
               <p>Cloudflare</p>
-              <p>NixOS</p>
             </div>
             <div class="demonstration">
               <a href="https://github.com/timmyjinks/TYSONCLOUD">View Code</a>
@@ -148,11 +128,10 @@
             </p>
             <div class="technologies">
               <p>NixOS</p>
+              <p>Ubuntu Server</p>
               <p>Proxmox</p>
               <p>Docker</p>
               <p>Traefik</p>
-              <p>Grafana</p>
-              <p>Prometheus</p>
               <p>Cloudflare</p>
             </div>
             <div class="demonstration">
@@ -227,9 +206,7 @@
     </section>
 
     <footer>
-      <p id="footer-copyright">
-        © 2025 Tyson Jenkins. Built with passion for scalable infrastructure.
-      </p>
+      <p id="footer-copyright">© 2025 Tyson Jenkins.</p>
     </footer>
   </body>
 </html>
