Change html and styling

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Tyson Jenkins - DevOps Engineer & Software Developer specializing in cloud infrastructure, containerization, and full-stack development."
-    />
+    <meta name="description" content="Tyson Jenkins - Portfolio" />
     <link rel="stylesheet" href="styles/global.css" />
     <link
       rel="stylesheet"
@@ -18,12 +15,8 @@
       src="https://kit.fontawesome.com/e3f2f9bf33.js"
       crossorigin="anonymous"
     ></script>
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="assets/Generative AI, Psychedelic Space banner template, nostalgic 80s, 90s background_ Horizontal illustration of the future landscape with mountains, planets, trees, moon.jpg"
-    />
-    <title>Tyson Jenkins - DevOps Engineer</title>
+    <link rel="icon" type="image/x-icon" href="assets/space.jpg" />
+    <title>Tyson Jenkins</title>
   </head>
   <body>
     <header>
@@ -92,7 +85,7 @@
 
     <section class="projects-section">
       <div class="projects-container">
-        <h2 id="projects">Featured Projects</h2>
+        <h2 id="projects">Projects</h2>
         <div class="projects">
           <div class="project-item">
             <h2>TYSONCLOUD</h2>
@@ -117,7 +110,7 @@
           </div>
 
           <div class="project-item">
-            <h2>Production Homelab</h2>
+            <h2>Homelab</h2>
             <div class="project-image">
               <img src="assets/Homelab.png" alt="Homelab Dashboard" />
             </div>
